# chess-lm

./: .coverage  .gitignore  .ruffignore  Makefile  README.md  coverage.json  main.py  pyproject.toml
data/: test_games.jsonl  train_synth.jsonl
scripts/: check_dataset_window_sanity.py  check_moves_and_tokenizer.py  chess_tui_san.py  chess_tui_uci.py  demo_tiktoken.py  encode_smoke.py  export_vocab.py  generate_synthetic_games.py  hello_chess_sequence_dataset.py  hello_tokenizer.py  hf_tokenizer_example.py  load_vocab_hf.py  peek_dataset.py  pgn_to_ids.py  show_tokenizer_move_vocabulary.py  show_tokenizer_state_vocabulary.py
src/chess_lm/data/: __init__.py  chess_sequence_dataset.py  collate_causal.py
src/chess_lm/tokenizer/: __init__.py  cli.py  encoding.py  masks.py  moves.py  state_tokens.py
tests/: test_masks.py  test_moves.py  test_state_tokens.py  test_tokenizer.py  test_tokenizer_cli.py
tests/data/: test_chess_sequence_dataset.py  test_chess_sequence_dataset_coverage.py  test_collate_causal.py
tests/tokenizer/: __init__.py  test_masks.py  test_masks_coverage.py  test_moves.py  test_state_tokens.py  test_tokenizer.py  test_tokenizer_cli.py
